finished a few chapters lol

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,20 @@
-.officer {
+.container {
+    display: flex;
+    flex-direction: column;
+}
+.criminalsContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+.criminal {
     border: 1px dotted darkmagenta;
+    background-color: palevioletred;
     margin: .5em;
+    display: flex;
+    flex-direction: column;
+    flex-basis: 20%;
+}
+.criminal p, li {
+    font-size: small;
 }
