--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,6 @@
+@import "./criminals.css";
+@import url("https://fonts.googleapis.com/css?family=Comfortaa|Patua+One");
+
 /*Typography
 --------------------------------------------------------------*/
 body,
@@ -16,25 +19,8 @@ h1,h2,h3,h4,h5,h6 {
   letter-spacing: 2px;
 }
 
-
-
 .container {
     display: flex;
     flex-direction: column;
     font-size: 1.25rem;
-}
-
-.criminalsContainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-}
-
-.criminal {
-    border: 1px dotted darkmagenta;
-    background-color: palevioletred;
-    margin: .5em;
-    display: flex;
-    flex-direction: column;
-    flex-basis: 30%;
 }
