--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,5 @@
 @import "./criminals.css";
+@import "./filter.css";
 @import url("https://fonts.googleapis.com/css?family=Comfortaa|Patua+One");
 
 /*Typography
