--- a/styles/criminals.css
+++ b/styles/criminals.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    flex: 3;
 }
 
 .criminal {
@@ -10,5 +11,6 @@
     margin: .5em;
     display: flex;
     flex-direction: column;
-    flex-basis: 30%;
+    flex-basis: 25%;
+    padding: 0.3rem 1.5rem;
 }
