--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,6 @@
 @import "./criminals.css";
 @import "./filter.css";
+@import "./statements.css";
 @import "./notes.css";
 @import url("https://fonts.googleapis.com/css?family=Comfortaa|Patua+One");
 
