--- a/styles/main.css
+++ b/styles/main.css
@@ -22,7 +22,7 @@ textarea {
     height: 7rem;
 }
 
-input {
+.input--text {
     width: 30rem;
 }
 
@@ -31,7 +31,7 @@ h1,h2,h3,h4,h5,h6 {
   letter-spacing: 2px;
 }
 
-label {
+.label--wide {
     display: inline-block;
     min-width: 7rem;
     vertical-align: top;
