Now with facilities

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,5 @@
 @import "./criminals.css";
+@import "./facilities.css";
 @import "./filter.css";
 @import "./statements.css";
 @import "./notes.css";
